fixed no labels on saga instances
